k8s/overlays/prod/infrastructure/redis-insight/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-insight
  namespace: prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis-insight

  template:
    metadata:
      labels:
        app: redis-insight

    spec:
      containers:
        - name: redis-insight

          image: redis/redisinsight:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5540

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
