k8s/overlays/prod/infrastructure/redis-insight/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-insight
  namespace: prod

spec:
  selector:
    app: redis-insight

  ports:
    - port: 5540
      targetPort: 5540

  type: ClusterIP
