k8s/overlays/prod/infrastructure/redis-insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: redis-insight
  namespace: prod

spec:
  ingressClassName: traefik

  rules:
    - host: redis.cluster.stringtecnologiadf.org

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: redis-insight

                port:
                  number: 5540
